--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
@@ -41,8 +41,7 @@ package-lock.json
 # Permutato #
 #############
 
+*.txt
 *.pem
 *.key
 dist/
-
-/*.txt
