--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "allowJs": false,
     "outDir": "./dist/",
     "sourceMap": true,
-    "rootDir": "./src/",
     "removeComments": true,
     "strict": true,
     "noImplicitAny": true,
@@ -17,5 +16,8 @@
     "noImplicitReturns": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": [
+    "./node_modules/"
+  ]
 }
